ci: release action

--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -24,6 +24,7 @@
     "docs:build": "dumi build",
     "docs:build-analyze": "ANALYZE=1 dumi build",
     "doctor": "father doctor",
+    "ci": "npm run doctor",
     "prettier": "prettier --write \"src/*.{tsx,ts,less,md,json}\"",
     "start": "dumi dev"
   },
