--- a/packages/li-analysis-assets/tsconfig.json
+++ b/packages/li-analysis-assets/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@antv/li-p2/": ["packages/li-p2/"]
+    }
+  }
 }
