--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/npm-debug.log*
-/yarn-error.log
-/yarn.lock
-/package-lock.json
-/packages/*/node_modules
-/packages/*/yarn-error.log
+node_modules
+npm-debug.log*
+yarn-error.log
+yarn.lock
+package-lock.json
 
 # production
 /dist
