--- a/examples/li-template-assets/package.json
+++ b/examples/li-template-assets/package.json
@@ -9,6 +9,7 @@
   "main": "lib/index.js",
   "module": "es/index.js",
   "typings": "lib/index.d.ts",
+  "jsdelivr": "dist/li-template-assets.min.js",
   "unpkg": "dist/li-template-assets.min.js",
   "files": [
     "dist",
@@ -34,17 +35,17 @@
     "prepublishOnly": "npm run doctor && npm run build"
   },
   "dependencies": {
-    "@antv/li-sdk": "0.x",
+    "@antv/li-sdk": "^1.0.0",
     "@emotion/css": "^11.10.6",
     "classnames": "^2.3.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@antv/li-core-assets": "0.x",
-    "@antv/li-editor": "0.x",
+    "@antv/li-core-assets": "^1.0.0",
+    "@antv/li-editor": "^1.0.0",
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.9.26",
-    "@antv/larkmap": "^1.3.6",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@types/lodash-es": "^4.17.6",
@@ -67,8 +68,8 @@
   },
   "peerDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.9.26",
-    "@antv/larkmap": "^1.3.6",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "antd": "^5.4.6",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
