--- a/packages/li-analysis-assets/package.json
+++ b/packages/li-analysis-assets/package.json
@@ -13,6 +13,7 @@
     "**/*.less"
   ],
   "main": "dist/cjs/index.js",
+  "jsdelivr": "dist/umd/li-analysis-assets.min.js",
   "unpkg": "dist/umd/li-analysis-assets.min.js",
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
@@ -32,7 +33,7 @@
     "start": "dumi dev"
   },
   "dependencies": {
-    "@antv/g2": "^5.0.12",
+    "@antv/g2": "^5.0.14",
     "@antv/l7-draw": "^3.0.20",
     "@antv/li-p2": "^0.1.5",
     "@antv/li-sdk": "^0.37.4",
@@ -47,8 +48,8 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "@antv/li-core-assets": "^0.37.4",
     "@antv/li-editor": "^0.6.5",
     "@types/react": "^18.0.0",
@@ -61,8 +62,8 @@
   },
   "peerDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "antd": "^5.5.0",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
