--- a/packages/li-core-assets/package.json
+++ b/packages/li-core-assets/package.json
@@ -13,6 +13,7 @@
     "**/*.less"
   ],
   "main": "dist/cjs/index.js",
+  "jsdelivr": "dist/umd/li-core-assets.min.js",
   "unpkg": "dist/umd/li-core-assets.min.js",
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
@@ -42,8 +43,8 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "@antv/li-editor": "^0.6.5",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -55,8 +56,8 @@
   },
   "peerDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "antd": "^5.5.0",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
