--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "author": "yunji",
   "main": "dist/cjs/index.js",
+  "jsdelivr": "dist/umd/li-editor.min.js",
   "unpkg": "dist/umd/li-editor.min.js",
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
@@ -44,13 +45,14 @@
     "lodash-es": "^4.17.21",
     "papaparse": "^5.3.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-error-boundary": "^4.0.10",
     "shapefile": "^0.6.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "@types/geojson": "^7946.0.10",
     "@types/lodash-es": "^4.17.6",
     "@types/papaparse": "^5.3.3",
@@ -66,8 +68,8 @@
   },
   "peerDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "antd": "^5.5.0",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
