--- a/packages/li-sdk/package.json
+++ b/packages/li-sdk/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "author": "yunji",
   "main": "dist/cjs/index.js",
+  "jsdelivr": "dist/umd/li-sdk.min.js",
   "unpkg": "dist/umd/li-sdk.min.js",
   "module": "dist/esm/index.js",
   "typings": "dist/esm/index.d.ts",
@@ -40,8 +41,8 @@
   },
   "devDependencies": {
     "@ant-design/icons": "^5.0.1",
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "@formily/json-schema": "^2.2.4",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.0",
@@ -54,8 +55,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@antv/l7": "^2.11.0",
-    "@antv/larkmap": "^1.4.0",
+    "@antv/l7": "^2.17.2",
+    "@antv/larkmap": "^1.4.1",
     "react": ">=16.9.0",
     "react-dom": ">=16.9.0"
   },
