--- a/packages/li-core-assets/package.json
+++ b/packages/li-core-assets/package.json
@@ -7,8 +7,12 @@
     "li"
   ],
   "homepage": "https://locationinsight.antv.antgroup.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/antvis/L7VP.git"
+  },
   "license": "Apache-2.0",
-  "author": "yunji",
+  "author": "https://github.com/orgs/antvis/people",
   "sideEffects": [
     "**/*.less"
   ],
