--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "build:core-assets": "lerna run build --scope=@antv/li-core-assets",
     "build:analysis-assets": "lerna run build --scope=@antv/li-analysis-assets",
     "build:package": "lerna run build --skip-nx-cache",
+    "build": "cross-env BUNDLE_ENV=bundle npm run build:package",
     "package-version": "lerna version --conventional-commits",
     "package-preversion": "lerna version --conventional-prerelease",
-    "prepublishOnly": "lerna run doctor && npm run build:package",
+    "prepublishOnly": "lerna run doctor && npm run build",
     "package-publish": "lerna publish from-package",
     "package-betapublish": "lerna publish from-package --dist-tag beta",
     "postpublish": "scripts/intranet-sync.sh"
@@ -36,7 +37,7 @@
     "eslint-plugin-import": "^2.26.0",
     "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
-    "lerna": "^6.6.1",
+    "lerna": "^7.1.4",
     "lint-staged": "^13.0.3",
     "typescript": "^4.7.4",
     "webpack-bundle-analyzer": "^4.6.1",
