--- a/packages/li-core-assets/package.json
+++ b/packages/li-core-assets/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "build": "npm run clean && father build",
+    "bundle": "cross-env BUNDLE_ENV=bundle npm run build",
     "clean": "rimraf dist",
     "dev": "father dev",
     "docs:build": "dumi build",
@@ -71,9 +72,6 @@
     "registry": "https://registry.npmjs.org"
   },
   "nx": {
-    "implicitDependencies": [
-      "@antv/li-sdk",
-      "@antv/li-p2"
-    ]
+    "implicitDependencies": []
   }
 }
