--- a/packages/li-p2/package.json
+++ b/packages/li-p2/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "build": "npm run clean && father build",
+    "bundle": "cross-env BUNDLE_ENV=bundle npm run build",
     "clean": "rimraf dist",
     "dev": "father dev",
     "docs:build": "dumi build",
