--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -41,6 +41,7 @@
     "@formily/antd-v5": "^1.1.0-beta.3",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
+    "@monaco-editor/react": "^4.5.1",
     "@turf/turf": "^6.5.0",
     "ahooks": "^3.7.0",
     "classnames": "^2.3.1",
