--- a/packages/li-analysis-assets/package.json
+++ b/packages/li-analysis-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-analysis-assets",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.0",
   "description": "analysis assets for location insight",
   "keywords": [
     "analysis assets",
@@ -41,7 +41,7 @@
     "@antv/g2": "^5.0.14",
     "@antv/l7-draw": "^3.0.20",
     "@antv/li-p2": "^1.0.4",
-    "@antv/li-sdk": "^1.0.4",
+    "@antv/li-sdk": "^1.0.5-alpha.0",
     "@antv/s2": "^1.47.1",
     "@antv/s2-react": "^1.40.0",
     "@emotion/css": "^11.10.6",
@@ -55,8 +55,8 @@
     "@ant-design/icons": "^5.0.1",
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
-    "@antv/li-core-assets": "^1.0.4",
-    "@antv/li-editor": "^1.0.4",
+    "@antv/li-core-assets": "^1.0.5-alpha.0",
+    "@antv/li-editor": "^1.0.5-alpha.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.5.0",
