--- a/packages/li-sdk/package.json
+++ b/packages/li-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5-alpha.0",
   "description": "sdk for location insight",
   "keywords": [
     "sdk",
