--- a/packages/li-core-assets/package.json
+++ b/packages/li-core-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-core-assets",
-  "version": "1.0.4",
+  "version": "1.0.6-alpha.0",
   "description": "core assets for location insight",
   "keywords": [
     "core assets",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@antv/li-p2": "^1.0.4",
-    "@antv/li-sdk": "^1.0.4",
+    "@antv/li-sdk": "^1.0.5-alpha.0",
     "@emotion/css": "^11.10.6",
     "classnames": "^2.3.1",
     "gcoord": "^0.3.2",
@@ -50,7 +50,7 @@
     "@ant-design/icons": "^5.0.1",
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
-    "@antv/li-editor": "^1.0.4",
+    "@antv/li-editor": "^1.0.5-alpha.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.5.0",
