--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-editor",
-  "version": "1.0.5-alpha.0",
+  "version": "1.0.5",
   "description": "editor for location insight",
   "keywords": [
     "editor",
@@ -37,7 +37,7 @@
   "dependencies": {
     "@antv/event-emitter": "^0.1.3",
     "@antv/li-p2": "^1.0.4",
-    "@antv/li-sdk": "^1.0.5-alpha.0",
+    "@antv/li-sdk": "^1.0.5",
     "@formily/antd-v5": "^1.1.0-beta.3",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
