--- a/.github/workflows/pyl7vp-test.yml
+++ b/.github/workflows/pyl7vp-test.yml
@@ -1,15 +1,13 @@
 name: pyl7vp-test
 
-on:
-  release:
-    types: [created, edited]
+on: push
 
 jobs:
   pyl7vp-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
