--- a/.github/workflows/pyl7vp-test.yml
+++ b/.github/workflows/pyl7vp-test.yml
@@ -16,12 +16,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: change pyl7vp directory
-        run: cd bindings/pyl7vp
-
       - name: Install dependencies
         run: |
+          cd bindings/pyl7vp
           python -m pip install --upgrade pip
+          pwd
           pip install -e .
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
