--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Push gh-pages
         run: |
-          cd dist
+          cd examples/builder/dist
           git init
           git config --local user.name antv
           git config --local user.email antv@antfin.com
@@ -35,6 +35,6 @@ jobs:
       - uses: ad-m/github-push-action@master
         with:
           github_token: ${{secrets.GITHUB_TOKEN}}
-          directory: dist
+          directory: examples/builder/dist
           branch: gh-pages
           force: true
