--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -50,6 +50,7 @@
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "papaparse": "^5.3.2",
+    "pmtiles": "^2.10.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-error-boundary": "^4.0.10",
     "shapefile": "^0.6.6",
