--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -38,7 +38,7 @@
     "@antv/event-emitter": "^0.1.3",
     "@antv/li-p2": "^1.1.1",
     "@antv/li-sdk": "^1.0.6",
-    "@formily/antd-v5": "^1.1.0-beta.3",
+    "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
     "@monaco-editor/react": "^4.5.1",
