--- a/packages/li-p2/package.json
+++ b/packages/li-p2/package.json
@@ -38,7 +38,7 @@
     "start": "dumi dev"
   },
   "dependencies": {
-    "@formily/antd-v5": "^1.1.0-beta.3",
+    "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
     "@formily/reactive": "^2.2.24",
