--- a/examples/builder/package.json
+++ b/examples/builder/package.json
@@ -20,6 +20,8 @@
     "antd": "^5.5.0",
     "download.js": "^1.0.0",
     "lodash-es": "^4.17.21",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "umi": "^4.0.64"
   },
   "devDependencies": {
