--- a/packages/li-p2/package.json
+++ b/packages/li-p2/package.json
@@ -67,8 +67,8 @@
   "peerDependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.5.0",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "publishConfig": {
     "access": "public",
