--- a/packages/li-sdk/package.json
+++ b/packages/li-sdk/package.json
@@ -62,8 +62,8 @@
   "peerDependencies": {
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "publishConfig": {
     "access": "public",
