--- a/packages/li-sdk/package.json
+++ b/packages/li-sdk/package.json
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "@antv/event-emitter": "^0.1.3",
+    "@tanstack/query-core": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "ahooks": "^3.7.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.7",
