--- a/packages/li-core-assets/package.json
+++ b/packages/li-core-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-core-assets",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "core assets for location insight",
   "keywords": [
     "core assets",
@@ -38,8 +38,8 @@
     "start": "dumi dev"
   },
   "dependencies": {
-    "@antv/li-p2": "^1.2.0",
-    "@antv/li-sdk": "^1.1.0",
+    "@antv/li-p2": "^1.2.1-alpha.0",
+    "@antv/li-sdk": "^1.1.1-alpha.0",
     "@emotion/css": "^11.10.6",
     "classnames": "^2.3.1",
     "gcoord": "^0.3.2",
@@ -50,7 +50,7 @@
     "@ant-design/icons": "^5.0.1",
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
-    "@antv/li-editor": "^1.1.3",
+    "@antv/li-editor": "^1.1.4-alpha.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.5.0",
@@ -64,8 +64,8 @@
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
     "antd": "^5.5.0",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "publishConfig": {
     "access": "public",
