--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-editor",
-  "version": "1.1.3",
+  "version": "1.1.4-alpha.0",
   "description": "editor for location insight",
   "keywords": [
     "editor",
@@ -36,17 +36,20 @@
   },
   "dependencies": {
     "@antv/event-emitter": "^0.1.3",
-    "@antv/li-p2": "^1.2.0",
-    "@antv/li-sdk": "^1.1.0",
+    "@antv/li-p2": "^1.2.1-alpha.0",
+    "@antv/li-sdk": "^1.1.1-alpha.0",
     "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
     "@monaco-editor/react": "^4.5.1",
+    "@tanstack/query-core": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "@turf/turf": "^6.5.0",
     "ahooks": "^3.7.0",
     "classnames": "^2.3.1",
     "download.js": "^1.0.0",
-    "immer": "^9.0.15",
+    "h3-js": "^4.1.0",
+    "immer": "^10.0.3",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "papaparse": "^5.3.2",
@@ -77,8 +80,8 @@
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
     "antd": "^5.5.0",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "publishConfig": {
     "access": "public",
