--- a/packages/li-sdk/package.json
+++ b/packages/li-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-sdk",
-  "version": "1.1.0",
+  "version": "1.1.1-alpha.0",
   "description": "sdk for location insight",
   "keywords": [
     "sdk",
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "@antv/event-emitter": "^0.1.3",
+    "@tanstack/query-core": "^5.0.0",
+    "@tanstack/react-query": "^5.0.0",
     "ahooks": "^3.7.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.7",
@@ -62,8 +64,8 @@
   "peerDependencies": {
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.1",
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "publishConfig": {
     "access": "public",
