--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/li-editor",
-  "version": "1.1.4-alpha.0",
+  "version": "1.1.4",
   "description": "editor for location insight",
   "keywords": [
     "editor",
@@ -36,8 +36,8 @@
   },
   "dependencies": {
     "@antv/event-emitter": "^0.1.3",
-    "@antv/li-p2": "^1.2.1-alpha.0",
-    "@antv/li-sdk": "^1.1.1-alpha.0",
+    "@antv/li-p2": "^1.2.1",
+    "@antv/li-sdk": "^1.1.1",
     "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
