--- a/packages/li-p2/package.json
+++ b/packages/li-p2/package.json
@@ -48,6 +48,7 @@
     "colorbrewer": "^1.5.3",
     "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
+    "quill": "^1.3.6",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1"
   },
@@ -56,6 +57,7 @@
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.9",
     "@types/lodash-es": "^4.17.6",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.5.0",
