--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -38,6 +38,7 @@
     "@antv/event-emitter": "^0.1.3",
     "@antv/li-p2": "^1.6.0",
     "@antv/li-sdk": "^1.3.0",
+    "@emotion/css": "^11.10.6",
     "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
