chore: npm innore

--- a/examples/li-template-assets/package.json
+++ b/examples/li-template-assets/package.json
@@ -15,7 +15,8 @@
     "dist",
     "lib",
     "es",
-    "README.md"
+    "README.md",
+    "!dist/report.html"
   ],
   "scripts": {
     "prepare": "husky install",
