--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -20,7 +20,8 @@
   "typings": "dist/esm/index.d.ts",
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "!dist/umd/report.html"
   ],
   "scripts": {
     "build": "npm run clean && father build",
@@ -44,7 +45,6 @@
     "@formily/react": "^2.2.24",
     "@monaco-editor/react": "^4.5.1",
     "@tanstack/query-core": "^5.0.0",
-    "@tanstack/react-query": "^5.0.0",
     "@turf/turf": "^6.5.0",
     "ahooks": "^3.7.0",
     "classnames": "^2.3.1",
