--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:editor": "lerna run start --stream --scope=@antv/li-editor",
     "start:core-assets": "lerna run start --stream --scope=@antv/li-core-assets",
     "start:analysis-assets": "lerna run start --stream --scope=@antv/li-analysis-assets",
+    "start:website": "lerna run start --stream --scope=@antv/li-website",
     "lint": "npm run lint:ts && npm run lint:style",
     "lint:ts": "eslint packages --ext .ts,.tsx",
     "lint:style": "stylelint \"packages/**/*.less\"",
@@ -22,7 +23,8 @@
     "build:editor": "lerna run build --scope=@antv/li-editor",
     "build:core-assets": "lerna run build --scope=@antv/li-core-assets",
     "build:analysis-assets": "lerna run build --scope=@antv/li-analysis-assets",
-    "build:package": "lerna run build --skip-nx-cache",
+    "build:website": "lerna run build --scope=@antv/li-website --skip-nx-cache",
+    "build:package": "lerna run build --ignore=@antv/li-website --skip-nx-cache ",
     "build": "cross-env BUNDLE_ENV=bundle npm run build:package",
     "package-version": "lerna version --conventional-commits",
     "package-preversion": "lerna version --conventional-prerelease",
