--- a/examples/builder/package.json
+++ b/examples/builder/package.json
@@ -13,10 +13,10 @@
     "@ant-design/icons": "^5.0.1",
     "@antv/l7": "^2.17.2",
     "@antv/larkmap": "^1.4.11",
-    "@antv/li-analysis-assets": "link:../../packages/li-analysis-assets",
-    "@antv/li-core-assets": "link:../../packages/li-core-assets",
-    "@antv/li-editor": "link:../../packages/li-editor",
-    "@antv/li-sdk": "link:../../packages/li-sdk",
+    "@antv/li-analysis-assets": "^1.7.4",
+    "@antv/li-core-assets": "^1.3.4",
+    "@antv/li-editor": "^1.5.3",
+    "@antv/li-sdk": "^1.4.2",
     "antd": "^5.5.0",
     "download.js": "^1.0.0",
     "lodash-es": "^4.17.21",
