--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -9,26 +9,23 @@ jobs:
       matrix:
         node-version: [16.x]
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    - name: Build package
-      run: |
-        yarn install
-        yarn build:package
+      - name: Installation
+        run: |
+          yarn install
 
-    - name: Build examples builder
-      run: |
-        cd examples/builder
-        yarn install
-        yarn build
+      - name: Build Website
+        run: |
+          yarn build:website
 
-    - uses: afc163/surge-preview@v1
-      with:
-        surge_token: ${{ secrets.SURGE_TOKEN }}
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        dist: examples/builder/dist
-        build: echo
+      - uses: afc163/surge-preview@v1
+        with:
+          surge_token: ${{ secrets.SURGE_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          dist: website/dist
+          build: echo
