--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,9 @@ jobs:
         with:
           node-version: 16
 
-      - name: Build package
+      - name: Installation
         run: |
           yarn install
-          yarn build:package
 
       - name: Build Website
         run: |
