--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,6 +1,10 @@
 name: Surge PR Preview
 
-on: pull_request
+on:
+  pull_request:
+    paths:
+      - 'packages/**'
+      - 'website/**'
 
 jobs:
   preview:
