ci: release dispatch

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: release
 
 on:
+  workflow_dispatch:
   release:
-    types: [created, edited]
+    types: [released]
 
 jobs:
   publish-site:
