fix: 修复时间轴把手控件 (#157)
* fix: 修复时间轴把手控件

* chore: set vis opacity

* chore: add path of trigger

* chore: update deps

* ci: upgrade node 18

* chore: getUId

* chore: upgrad version

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,13 +4,14 @@ on:
   push:
     paths:
       - 'packages/**'
+      - 'website/**'
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
