--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -56,6 +56,7 @@
     "papaparse": "^5.3.2",
     "react-beautiful-dnd": "13.1.1",
     "react-error-boundary": "^4.0.10",
+    "@types/react-beautiful-dnd": "13.1.8",
     "shapefile": "^0.6.6",
     "xlsx": "^0.18.5"
   },
@@ -67,7 +68,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/papaparse": "^5.3.3",
     "@types/react": "^18.0.0",
-    "@types/react-beautiful-dnd": "13.1.1",
+    "@types/react-beautiful-dnd": "13.1.8",
     "@types/react-dom": "^18.0.0",
     "@types/shapefile": "^0.6.1",
     "antd": "^5.5.0",
@@ -85,7 +86,8 @@
     "react-dom": "^18.0.0"
   },
   "resolutions" : {
-    "react-beautiful-dnd": "13.1.1"
+    "react-beautiful-dnd": "13.1.1",
+    "@types/react-beautiful-dnd": "13.1.8"
   },
   "publishConfig": {
     "access": "public",
