--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -54,7 +54,7 @@
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "papaparse": "^5.3.2",
-    "react-beautiful-dnd": "13.1.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-error-boundary": "^4.0.10",
     "shapefile": "^0.6.6",
     "xlsx": "^0.18.5"
@@ -69,6 +69,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/shapefile": "^0.6.1",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "antd": "^5.5.0",
     "dumi": "^1.1.46",
     "father": "^4.0.7",
@@ -82,9 +83,6 @@
     "antd": "^5.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
-  },
-  "resolutions" : {
-    "react-beautiful-dnd": "13.1.1"
   },
   "publishConfig": {
     "access": "public",
