chore: replace react-beautiful-dnd with @hello-pangea/dnd

--- a/packages/li-editor/package.json
+++ b/packages/li-editor/package.json
@@ -43,6 +43,7 @@
     "@formily/antd-v5": "^1.1.2",
     "@formily/core": "^2.2.24",
     "@formily/react": "^2.2.24",
+    "@hello-pangea/dnd": "^17.0.0",
     "@monaco-editor/react": "^4.5.1",
     "@tanstack/query-core": "^5.0.0",
     "@turf/turf": "^6.5.0",
@@ -54,7 +55,6 @@
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "papaparse": "^5.3.2",
-    "react-beautiful-dnd": "^13.1.0",
     "react-error-boundary": "^4.0.10",
     "shapefile": "^0.6.6",
     "xlsx": "^0.18.5"
@@ -67,7 +67,6 @@
     "@types/lodash-es": "^4.17.6",
     "@types/papaparse": "^5.3.3",
     "@types/react": "^18.0.0",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
     "@types/shapefile": "^0.6.1",
     "antd": "^5.5.0",
