feat: 删除不需要代码

--- a/package.json
+++ b/package.json
@@ -57,8 +57,5 @@
       "prettier --parser=typescript --write"
     ]
   },
-  "repository": "git@github.com:antvis/L7VP.git",
-  "dependencies": {
-    "react-beautiful-dnd": "^13.1.1"
-  }
+  "repository": "git@github.com:antvis/L7VP.git"
 }
